--- a/Customer-service/src/main/resources/application.yml
+++ b/Customer-service/src/main/resources/application.yml
@@ -4,3 +4,18 @@ server:
 spring:
   application:
     name: customer-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/customer_db
+    username: root
+    password:
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        format_sql: true
+        show-sql: true
