- module name added - sales module added

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
     <modules>
         <module>Customer-service</module>
-        <module>inventory</module>
+        <module>Inventory</module>
+        <module>Sales</module>
     </modules>
 
 
