--- a/Sales/src/main/resources/application.yml
+++ b/Sales/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         format_sql: true
         show-sql: true
+        use_sql_comments : true
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
@@ -29,3 +30,8 @@ spring:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
