--- a/Sales/src/main/resources/application.yml
+++ b/Sales/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
         format_sql: true
         show-sql: true
         use_sql_comments : true
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
