--- a/Customer-service/src/main/resources/application.yml
+++ b/Customer-service/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         format_sql: true
         show-sql: true
+        use_sql_comments: true
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
@@ -26,7 +27,10 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    producer:
-      bootstrap-servers: localhost:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        spring.json.trusted.packages: "*"
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
