-application.yml files updated according to docker-compose file

--- a/Customer-service/src/main/resources/application.yml
+++ b/Customer-service/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8081
+  port: 9081
 
 spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:3306/customer_db
+    url: jdbc:mysql://localhost:6033/pos-customer
     username: root
-    password:
+    password: root
   jpa:
     show-sql: true
     hibernate:
