--- a/Inventory/src/main/resources/application.yml
+++ b/Inventory/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8082
+  port:  9082
 spring:
   application:
     name: inventory-service
   datasource:
-    url: jdbc:mysql://localhost:3306/inventory_db
+    url: jdbc:mysql://localhost:6035/pos-inventory
     username: root
-    password:
+    password: root
   jpa:
     show-sql: true
     hibernate:
