-kafka , zookeeper added into docker compose files

--- a/pos-docker-compose.yml
+++ b/pos-docker-compose.yml
@@ -49,3 +49,22 @@ services:
       PMA_HOST: con-db-inventory
     ports:
       - 8083:80
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    links:
+      - zookeeper:zookeeper
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_CREATE_TOPICS: "topic_update_sale:1:1,topic_register_new_customer:1:1"
