--- a/Customer-service/Dockerfile
+++ b/Customer-service/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:8-jre-alpine3.9
 
 ARG rootSrc
 
-RUN echo ${rootSrc}
+RUN echo "${rootSrc}"
 # copy the packaged jar file into our docker image
 COPY ${rootSrc}/target/customer-0.0.1-SNAPSHOT.jar /customer-0.0.1-SNAPSHOT.jar
 
