jenkinsfile/dockerfile updated

--- a/Customer-service/Dockerfile
+++ b/Customer-service/Dockerfile
@@ -5,7 +5,7 @@ ARG rootSrc
 
 RUN echo "${rootSrc}"
 # copy the packaged jar file into our docker image
-COPY ${rootSrc}/Customer-service/target/customer-0.0.1-SNAPSHOT.jar /customer-0.0.1-SNAPSHOT.jar
+COPY Customer-service/target/customer-0.0.1-SNAPSHOT.jar /customer-0.0.1-SNAPSHOT.jar
 
 # set the startup command to execute the jar
 CMD ["java", "-jar", "/customer-0.0.1-SNAPSHOT.jar"]
