- aws dependencies removed - lambda handler removed - programatic DB connection rmoved - kafka removed (if necessary, please look into other commit)

--- a/Customer-service/src/main/resources/application.yml
+++ b/Customer-service/src/main/resources/application.yml
@@ -5,9 +5,10 @@ spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:6033/pos-customer
-    username: root
-    password: root
+    url: jdbc:mysql://pos-customer.cqacoixsc0t7.us-east-1.rds.amazonaws.com:3306/pos-customer
+    username: admin
+    password: password
+    driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
     hibernate:
@@ -20,15 +21,15 @@ spring:
         format_sql: true
         show-sql: true
         use_sql_comments: true
-  kafka:
-    consumer:
-      bootstrap-servers: localhost:9092
-      group-id: consumer-service
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      properties:
-        spring.json.trusted.packages: "*"
+#  kafka:
+#    consumer:
+#      bootstrap-servers: localhost:9092
+#      group-id: consumer-service
+#      auto-offset-reset: earliest
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      properties:
+#        spring.json.trusted.packages: "*"
 logging:
   level:
     org:
