--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: |
-            cd .\Customer-service\
+            cd Customer-service
             mvn clean install -DskipTests
