rds link removed

--- a/Customer-service/src/main/resources/application.yml
+++ b/Customer-service/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://pos-customer.cqacoixsc0t7.us-east-1.rds.amazonaws.com:3306/pos-customer
-    username: admin
-    password: password
+    url: jdbc:mysql://localhost:6033/pos-customer
+    username: root
+    password: root
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
